# Byme

./: Cargo.toml  README.md  index.html  notes.txt  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts.js  tsconfig.json  vite.config.ts
.vpprefdata/: .autoSaveProjectInfo  .systemproject.vpp  .systemproject.vpp.bak_000f  .systemproject.vpp.bak_001d  .systemproject.vpp.bak_002d  .systemproject.vpp.bak_005d  .vp.preference
.vpprefdata/LayoutPerspectiveData/: _C4AVxKD.AACAQOEC.lod  _C4AVxKD.AACAQOEMC.lod
.vpprefdata/nicknames/: HaIUTemGAqHIAQwu  NickNameIndexing.xml
.vpprefdata/projectsViewInfo/: sDJsjemGAqHIAQBZ
.vpprefdata/sideComponents/: Indexing.xml
.vpprefdata/treestates/: ProjectTreeStateIndexing.xml  zaIUTemGAqHIAQwt
Diagram/: Diagram.vpp  Diagram.vpp.bak_000f  Diagram.vpp.bak_001d  Diagram.vpp.bak_003d  Diagram.vpp.bak_004d  Diagram.vpp.bak_005d
auth-service/src/: controller.rs  mod.rs  repository.rs  response.rs  routes.rs  service.rs
model/src/: master.rs  posts.rs  schema.rs  state.rs  users.rs
rust-service/auth-service/: Cargo.toml
rust-service/auth-service/src/: controller.rs  lib.rs  main.rs  mod.rs  repository.rs  response.rs  responses.rs  routes.rs  service.rs
rust-service/comment-service/: Cargo.toml
rust-service/model/: .env  Cargo.toml  diesel.toml
rust-service/model/migrations/00000000000000_diesel_initial_setup/: up.sql
rust-service/model/migrations/2025-07-30-071218_origins/: down.sql  up.sql
rust-service/model/migrations/2025-07-30-071231_violationtypes/: down.sql  up.sql
rust-service/model/migrations/2025-07-30-071242_categories/: up.sql
rust-service/model/migrations/2025-07-30-071248_songs/: up.sql
rust-service/model/migrations/2025-07-30-071256_users/: up.sql
rust-service/model/migrations/2025-07-30-071305_userfollowings/: down.sql  up.sql
rust-service/model/migrations/2025-07-30-071312_posts/: up.sql
rust-service/model/migrations/2025-07-30-071317_comments/: up.sql
rust-service/model/migrations/2025-07-30-071323_replycomments/: down.sql  up.sql
rust-service/model/migrations/2025-07-30-071329_chats/: up.sql
rust-service/model/migrations/2025-07-30-071337_postcomments/: down.sql  up.sql
rust-service/model/migrations/2025-07-30-071342_usersongs/: down.sql  up.sql
rust-service/model/migrations/2025-07-30-071351_commentlikes/: down.sql  up.sql
rust-service/model/migrations/2025-07-30-071357_postlikes/: down.sql  up.sql
rust-service/model/migrations/2025-07-30-071406_reports/: up.sql
rust-service/model/migrations/2025-08-04-002003_requesttypes/: up.sql
rust-service/model/migrations/2025-08-04-002136_requests/: down.sql  up.sql
rust-service/model/migrations/2025-08-05-001821_resettokens/: down.sql  up.sql
rust-service/model/migrations/2025-08-15-131514_postfiles/: up.sql
rust-service/model/src/: accessible.rs  comments.rs  jwt.rs  lib.rs  main.rs  master.rs  posts.rs  schema.rs  state.rs  usable.rs  users.rs
rust-service/post-service/: Cargo.toml
rust-service/post-service/src/: controller.rs  main.rs  mod.rs  repository.rs  routes.rs  service.rs
rust-service/song-service/: Cargo.toml
rust-service/user-service/: Cargo.toml
rust-service/user-service/src/: controller.rs  main.rs  mod.rs  repository.rs  response.rs  routes.rs  service.rs
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  state.rs
src-tauri/src/auth-services/: controller.rs  handler.rs  mod.rs  repository.rs  service.rs
src-tauri/src/model/: master.rs  mod.rs  posts.rs  users.rs
src/AuthenticationPage/: Login.tsx  Register.tsx
src/FrontUtils/: AuthenticationHandler.ts  Library.ts  StateManagement.ts  UserHandler.ts
tmp/: .systemproject.vpp12577232019828202316.tmp  Diagram.vpp10557964166058073176.tmp  Diagram.vpp9958093870966141641.tmp
(+40 files in other folders)
