[package]
name = "post-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
headers = "0.4"
diesel = { version = "2.1.0", features = ["postgres", "uuid", "chrono", "r2d2"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
tokio = { version = "1.45", features = ["full"] }
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
reqwest = { version = "0.12", features = ["json"] }
model = { path = "../model" }
user-service = { path = "../user-service" }
