[package]
name = "user-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
diesel = { version = "2.1.0", features = ["postgres", "uuid", "chrono", "r2d2"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
tokio = { version = "1.45", features = ["full"] }
model = { path = "../model" }
axum-server = { version = "0.7.2", features = ["tls-rustls"] }

[lib]
name = "user_service"
path = "src/lib.rs"
